added referralcode handlers in adminRoute

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       - "3000:3000"
     volumes:
       - /home/ragam/mounts/ragam26-ca-backend:/app/public/
+      - ./data/csv:/app/data/csv
+      - ./prisma/migrations:/app/prisma/migrations
     networks:
       - ca_network
 
@@ -43,4 +45,4 @@ networks:
     driver: bridge
 
 volumes:
-  ca_db_data:
+  ca_db_data: 
